# async-nrf52832-hal

./: Cargo.toml
examples/.cargo/: config.toml
examples/gpiote-demo/: README.md
examples/gpiote-demo/src/: lib.rs
examples/spim-demo/: Cargo.toml  rust-toolchain.toml
examples/template-demo/.cargo/: config.toml
nrf52832-hal/: Cargo.toml
nrf52832-hal/src/: gpiote.rs  lib.rs  monotonic.rs  saadc.rs  spim.rs  waker_registration.rs
src/: gpio.rs  gpiote.rs  interrupt_token.rs  lib.rs
