[package]
name = "async-nrf52832-hal"
version = "0.1.0"
edition = "2021"
authors = ["Emil Fresk <emil@widefind.se>"]
# readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52832-hal = { version = "0.16.0" }
critical-section = "1.1.1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal.git", branch = "afit" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git", branch = "afit" }
embedded-dma = "0.2.0"
defmt = "0.3"

[dependencies.void]
default-features = false
version = "1.0.2"