[package]
name = "async-nrf52832-hal"
version = "0.1.0"
edition = "2021"
authors = ["Emil Fresk <emil@widefind.se>"]
# readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52832-pac = "0.12.2"
#nrf52832-hal = { version = "0.16.0" }
critical-section = "1.1.1"
cortex-m = { version = "0.7.6" }
embedded-hal-async = "0.2.0-alpha.0"
embedded-hal = "=1.0.0-alpha.9"
embedded-dma = "0.2.0"
defmt = "0.3"
# futures = { version = "0.3", default-features = false, features = [ "async-await" ] }
fugit = "0.3"
rtic-monotonic = "1"

[dependencies.void]
default-features = false
version = "1.0.2"

[features]
doc = []
rt = ["nrf52832-pac/rt"]
xxAA-package = []
xxAB-package = []

# Note: We use the xxAB package because it has the least amount of available resources.
#   However, most users will want to use the xxAA package.
default = ["rt", "xxAB-package"]